--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Sources/Frameworks/Motion"]
 	path = Sources/Frameworks/Motion
-	url = https://github.com/CosmicMind/Motion.git
+url=git@github.com:666tos/Motion.git
